# ds-find-caselaw-docs

./: .gitallowed  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  default.json  docker-compose.yml  optic.yml  pyproject.toml  pytest.ini  renovate.json  repo-dashboard.md
.github/workflows/: build-api-docs.yml  pre-commit.yml  secrets.yml
auth0/: Makefile  README.md  config.example.json  tenant.json
auth0/attack-protection/: breached-password-detection.json  suspicious-ip-throttling.json
auth0/clients/: auth0-deploy-cli-extension.json  production.json  staging.json
doc/: adding-new-courts.md  document-metadata.md  the-import-spreadsheet.md
doc/adr/: 0001-record-architecture-decisions.md  0002-use-a-microservice-architecture.md  0016-notes.md  (+65 more)
ds_judgments_public_access_service/: .gitignore  CONTRIBUTORS.txt  LICENSE  README.md  local.yml  manage.py  production.yml  setup.cfg
fragments/: copy-pdfs.py  delete-court.txt  ncn-free-judgment.xqy
marklogic/: .gitignore  CHANGELOG.md  README.md  build.gradle  docker-compose.yml  gradle-development.properties  gradle-example.properties  gradle-local.properties  gradle-qa.properties  gradle.properties
scripts/: audit_repo_config.py  build_dashboard  build_document_metadata_table  build_repo_lists  document-metadata.yml  markdown_table_renderer.py  preview-priv-api-docs  preview-public-api-docs  repositories.json  setup-syslog.sh
utilities/: README.md  my_xquery.xqy  run-xquery.py
utilities/spreadsheet_docx/: README.md  copy_from_bailii_s3.py  make_script.py  pyproject.toml
(+112 files in other folders)
