[tool.poetry]
name = "spreadsheet-docx"
version = "0.1.0"
description = ""
authors = ["Dragon Dave McKee <david.mckee@dxw.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
